<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/mainViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

        </androidx.viewpager2.widget.ViewPager2>

    </FrameLayout>

    <View
        android:id="@+id/noClickableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_fitToContents="false"
        app:behavior_expandedOffset="20dp"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#121212"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/settingsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="top"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/closeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/сдщыу"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/settingsTextView"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineBottomSheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <TextView
                    android:id="@+id/heightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/settingsTextView"
                    app:layout_constraintBottom_toTopOf="@+id/diameterTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Switch
                    android:id="@+id/heightSwitchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOff="@string/m"
                    android:textOn="@string/ft"
                    app:layout_constraintTop_toTopOf="@id/heightTextView"
                    app:layout_constraintBottom_toBottomOf="@id/heightTextView"
                    app:layout_constraintStart_toEndOf="@id/guidelineBottomSheet"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/diameterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/diameter"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/massTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

                <Switch
                    android:id="@+id/diameterSwitchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOff="@string/m"
                    android:textOn="@string/ft"
                    app:layout_constraintTop_toTopOf="@id/diameterTextView"
                    app:layout_constraintBottom_toBottomOf="@id/diameterTextView"
                    app:layout_constraintStart_toEndOf="@id/guidelineBottomSheet"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/massTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/mass"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/loadTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/diameterTextView" />

                <Switch
                    android:id="@+id/massSwitchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOff="@string/kg"
                    android:textOn="@string/lb"
                    app:layout_constraintTop_toTopOf="@id/massTextView"
                    app:layout_constraintBottom_toBottomOf="@id/massTextView"
                    app:layout_constraintStart_toEndOf="@id/guidelineBottomSheet"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/loadTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/load"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/massTextView" />

                <Switch
                    android:id="@+id/loadSwitchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOff="@string/kg"
                    android:textOn="@string/lb"
                    app:layout_constraintTop_toTopOf="@id/loadTextView"
                    app:layout_constraintBottom_toBottomOf="@id/loadTextView"
                    app:layout_constraintStart_toEndOf="@id/guidelineBottomSheet"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
